<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="videos">Videos</string>
    <string name="profile">Profile</string>
    <string name="choose_your_preferred_lang">Choose Your Preferred \nLanguage</string>

    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="telugu">తెలుగు</string>
    <string name="gujarati">ગુજરાતી</string>
    <string name="marathi">मराठी</string>
    <string name="tamil">தமிழ்</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="categories">Categories</string>
    <string name="salary">Salary</string>
    <string name="gift">Gift</string>
    <string name="lottery">Lottery</string>
    <string name="sale">Sale</string>
    <string name="refund">Refund</string>
    <string name="other">Other</string>
    <string name="setup_budget">Setup Budget</string>
    <string name="setup_my_monthly_expected_expenses">Setup my monthly expected expenses</string>
    <string name="food">Food</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="rent">Rent</string>
    <string name="verify_and_proceed">Verify and Proceed</string>
    <string name="education">Education</string>
    <string name="loan">Loan</string>
    <string name="travel">Travel</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="what_is_your_name">What is your name</string>
    <string name="enter_name">Enter name</string>
    <string name="hint_amount">\u20B9 0.00</string>
    <string name="hint_enter_amount">\u20B9 Enter Amount</string>
    <string name="what_is_your_gender">What is your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="what_is_your_age">What is your age</string>
    <string name="_18_24">18 - 24</string>
    <string name="_25_34">25 - 34</string>
    <string name="_35_44">35 - 44</string>
    <string name="_45">45 +</string>
    <string name="verify_your_mobile_number">Verify your mobile number</string>
    <string name="otp_will_be_sent_to_your_registered_mobile_number">OTP will be sent to your registered mobile number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="save">Save</string>
    <string name="get_started_with_prosperfit">Get started with Prosperfit</string>
    <string name="enter_your_mobile_number_to_get_register">Enter your mobile number to get register</string>
    <string name="get_otp">Get OTP</string>
    <string name="great">Great !</string>
    <string name="your_mobile_number_is_successfully_registered">Your mobile number is successfully registered</string>
    <string name="setup_my_budget">Setup my Budget</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="set_my_expense">Set My Expense</string>
    <string name="set_my_income">Set My Income</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
</resources>
