<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_41sdp"
        android:text="@string/categories"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/txtSalary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_63sdp"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:drawableTop="@drawable/ic_dish"
            android:gravity="center"
            android:hint="@string/food"
            android:padding="@dimen/_10sdp"
            android:text="" />

        <TextView
            android:id="@+id/txtGift"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_63sdp"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:drawableTop="@drawable/ic_bus"
            android:gravity="center"
            android:hint="@string/travel"
            android:padding="@dimen/_10sdp"
            android:text="" />

        <TextView
            android:id="@+id/txtLottery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_63sdp"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:drawableTop="@drawable/ic_house"
            android:gravity="center"
            android:hint="@string/rent"
            android:padding="@dimen/_10sdp"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/txtSale"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_63sdp"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:drawableTop="@drawable/ic_mortarboard"
            android:gravity="center"
            android:hint="@string/education"
            android:padding="@dimen/_10sdp"
            android:text="" />

        <TextView
            android:id="@+id/txtRefund"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_63sdp"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:drawableTop="@drawable/ic_loan"
            android:gravity="center"
            android:hint="@string/loan"
            android:padding="@dimen/_10sdp"
            android:text="" />

        <TextView
            android:id="@+id/txtOther"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_63sdp"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:hint="@string/other"
            android:text="" />

    </LinearLayout>


</LinearLayout>