<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:textSize="@dimen/_16sdp"
        android:drawableLeft="@drawable/ic_back"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:padding="@dimen/_5sdp"
        android:drawablePadding="@dimen/_14sdp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="Profile Details">

    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imgLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_iconfinder_icons_exit2_1564506"/>

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="@dimen/_72sdp"
            android:layout_height="@dimen/_72sdp"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/txtProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfile"
            android:layout_centerInParent="true"
            android:text="Dummy Name"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/what_is_your_name"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/edt_background"
        android:hint="@string/enter_name"
        android:padding="@dimen/_10sdp"
        android:text="" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/what_is_your_gender"
        android:textStyle="bold" />


    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_41sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/ic_male"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/male"
            android:textSize="@dimen/_14sdp" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/ic_female"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/female"
            android:textSize="@dimen/_14sdp" />
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/what_is_your_age"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio1834"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_41sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/rb1824"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/_18_24"
            android:textSize="@dimen/_14sdp" />

        <RadioButton
            android:id="@+id/rb2534"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/_25_34"
            android:textSize="@dimen/_14sdp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio35"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_41sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/rb3544"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/_35_44"
            android:textSize="@dimen/_14sdp" />

        <RadioButton
            android:id="@+id/rb45"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/_45"
            android:textSize="@dimen/_14sdp" />

    </RadioGroup>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:background="@drawable/background_tri_color"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>