<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/bottom_bar_image_width"
            android:layout_height="@dimen/bottom_bar_image_height"
            android:src="@drawable/ic_icon_home" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/bottom_bar_image_width"
            android:layout_height="@dimen/bottom_bar_image_height"
            android:src="@drawable/ic_icon_report" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/report" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/bottom_bar_image_width"
            android:layout_height="@dimen/bottom_bar_image_height"
            android:src="@drawable/ic_icon_video" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/videos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/bottom_bar_image_width"
            android:layout_height="@dimen/bottom_bar_image_height"
            android:src="@drawable/ic_icon_profile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/profile" />
    </LinearLayout>
</LinearLayout>