<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_72sdp"
            android:src="@drawable/ic_bg" />

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_72sdp"
            android:src="@drawable/ic_undraw_wallet_aym5" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtSetIncomeOrExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="Set My Income"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/edt_background"
        android:gravity="center_horizontal"
        android:hint="@string/hint_amount"
        android:inputType="number"
        android:padding="@dimen/_10sdp"
        android:text="" />

    <RadioGroup
        android:id="@+id/radioGroupCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_expense"
            style="@style/radio_btn_my_providers"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/expense" />

        <RadioButton
            android:id="@+id/btn_income"
            style="@style/radio_btn_other_providers"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/income" />
    </RadioGroup>


    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_72sdp"
        android:layout_marginTop="@dimen/_140sdp"
        android:layout_marginRight="@dimen/_72sdp"
        android:background="@drawable/background_tri_color"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />


</LinearLayout>