<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:layout_width="@dimen/_72sdp"
        android:layout_height="@dimen/_72sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_ill_registration" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/verify_your_mobile_number"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtOTPNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/otp_will_be_sent_to_your_registered_mobile_number" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />


    </LinearLayout>


    <TextView
        android:id="@+id/txtResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:gravity="end"
        android:text="@string/resend_otp"
        android:textColor="@color/colorPrimary" />


    <Button
        android:id="@+id/btnVerifyOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:background="@drawable/background_tri_color"
        android:text="@string/verify_otp"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

</LinearLayout>